# aptrade

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.app  Dockerfile.frontend  Dockerfile.frontend.dev  FUNDING.yml  LICENSE  Makefile  README.md  README.rst  boot.sh  compose.prod.yml  compose.yml  default.env  docker-compose.yaml  docker-compose.yml  hello.py  improvements.md  improvements_feed.md  index.html  initialize.sh  manage.py  mkdocs.yml  objects.inv  package-lock.json  private.env  pyproject.toml  requirements.txt  restart_compose.sh  roadmap-tickets.md  roadmap.md  setup.py  sitemap.xml  switcher.json  (+1 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: _docs.yml  ci.yml  docs.yml  errors.yml  main.yml  publish-to-pypi copy.yml  publish-to-pypi.yml  release copy.yml  release.yml
app/: __init__.py  api.py  main.py  requirements.txt
app/api/: __init__.py  api_routes.py  time.py
app/config/: config.py
app/core/: log_formatter.py  logging-json-disabled.conf  logging.conf
app/static/: index.html
app/templates/: admin.html  base.html  files.html  home.html  index.html  screener.html
aptrade/: Dockerfile  __init__.py  analyzer.py  apputils.py  aptsignal.py  asgi.py  backtest.py  broker.py  cerebro.py  cli.py  flt.py  functions.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineseries.py  metabase.py  observer.py  position.py  scanner.py  scanner_ws.py  settings.py  store.py  strategy.py  talib.py  telegram_bot.py  timer.py  trade.py  urls.py  writer.py  wsgi.py
aptrade/analyzers/: __init__.py  annualreturn.py  base.py  (+17 more)
backend/: Dockerfile  boot.sh  pyproject.toml  requirements.txt
components/: index.html
dashboard/: Dockerfile  package.json  vite.config.ts
deployment/: aptrade-app.nginx  aptrade-app.service  nginx.default.conf
docs/: IB.md  README.md  _api.rst  astro.config.mjs  backtesting.md  components.md  conf.py  dashboard_and_monitor.md  data.md  getting_started.md  index.md  index.rst  installation.md  instruments.md  introduction.md  list_of_futures_product_pages.md  modules.md  package-lock.json  package.json  production.md  production_strategy_changes.md  recent_changes.md  reference.md
environment/: apt-packages.list  dev.requirements.txt  local_conda_python_environment.yml  requirements.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
getting_started/: index.html
main/: .buildinfo  _api.html  components.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
modules/: index.html
samples/: README.md  example.ipynb  tutorial.py
science/: example.py  polygon.ipynb  trade_details.csv
scripts/: bc_utils_to_pst.py  download_from_barchart.py  update_from_barchart.py
search/: search_index.json
services/: readme.md  setup-ibkr-api.sh
syscontrol/: html_generation.py
syscore/: dateutils.py  genutils.py  pdutils.py  rounding.py
sysinit/: start_system.py
sysobjects/: epic_history.py  fsb_contract_prices.py
systems/: portfolio_fsb.py
telegram_bot/: Dockerfile  requirements.txt  start.sh
tests/: smoke_test.py  test_analyzer-eq.py  test_analyzer-sqn.py  test_analyzer-timereturn.py  test_comminfo.py  test_commissions.py  test_data_multiframe.py  test_data_replay.py  test_data_resample.py  test_example.py  test_foo.py  test_ind_accdecosc.py  test_ind_aroonoscillator.py  test_ind_aroonupdown.py  test_ind_atr.py  test_ind_awesomeoscillator.py  test_ind_bbands.py  test_ind_cci.py  test_ind_dema.py  test_ind_demaenvelope.py  test_ind_demaosc.py  test_ind_dm.py  test_ind_dma.py  test_ind_downmove.py  test_ind_dpo.py  test_ind_dv2.py  test_ind_ema.py  test_ind_emaenvelope.py  test_ind_emaosc.py  test_ind_envelope.py  test_ind_heikinashi.py  test_ind_highest.py  test_ind_hma.py  test_ind_ichimoku.py  test_ind_kama.py  test_ind_kamaenvelope.py  test_ind_kamaosc.py  test_ind_kst.py  test_ind_lowest.py  test_ind_lrsi.py  (+58 more)
tools/: bt-run.py  rewrite-data.py  yahoodownload.py
webapp/: Dockerfile  boot.sh  requirements.txt
(+806 files in other folders)
