[project]
name = "aptrade"
version = "0.0.7"
description = "Another Python tool for Trading and Backtesting"
readme = "docs/README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

authors = [
    { name = "Victor Caldas", email = "caldas.victor@gmail.com" }
]
dependencies = [
    "backtesting>=0.6.5",
    "beautifulsoup4>=4.14.2",
    "bn-lightweight-charts>=1.1.0",
    "boto3>=1.40.3",
    "ib-async>=2.1.0",
    "massive>=2.0.1",
    "matplotlib>=3.10.5",
    "pandas-market-calendars>=5.2.3",
    "plotly>=6.5.1",
    "polygon>=1.2.6",
    "polygon-api-client>=1.15.3",
    "pyarrow>=22.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "typer>=0.24.0",
]




[project.urls]
homepage = "https://vcaldas.github.io/aptrade/"
repository = "https://github.com/vcaldas/aptrade"
"Bug Tracker" = "https://github.com/vcaldas/aptrade/issues"

[project.scripts]
aptrade = "aptrade:cli.cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aptrade"
module-root = ""

[tool.uv.workspace]
members = ["documentation"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
