[project]
name = "aptrade"
version = "0.0.7"
description = "Another Python tool for Trading and Backtesting"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

authors = [
    { name = "Victor Caldas", email = "caldas.victor@gmail.com" }
]
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "requests>=2.33.1",
    "scipy>=1.17.1",
]
[project.scripts]
hello = "backtrader:main.main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["backtrader"]

[dependency-groups]
dev = ["pytest", "ruff"]
